--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - print_hello:
+      - print_hello
       - print_world:
           - requires: [print_hello]
       
