--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,14 @@ jobs:
           name: hello world
           command: echo "world"
 
+  print_myname:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run:
+          name: myname
+          command: echo $MY_NAME
+
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
@@ -28,4 +36,5 @@ workflows:
       - print_hello
       - print_world:
           requires: [print_hello]
+      - print_myname
       
