--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,15 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+
+commands:
+  print_pipeline_id:
+    parameters:
+      string_to_print:
+        type: string
+        default: hello yogi
+    steps:
+      - run: echo << parameters.string_to_print >>
+
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
@@ -26,6 +36,9 @@ jobs:
       - run:
           name: myname
           command: echo $MY_NAME
+      - run:
+          command: print_pipeline_id
+
 
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -37,4 +50,5 @@ workflows:
       - print_world:
           requires: [print_hello]
       - print_myname
+
       
