--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ commands:
     steps:
       - run: echo << parameters.string_to_print >>
 
+  error_handler:
+    steps:
+      - run: echo ERROR OCCURED!!!!!!
+
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
@@ -36,8 +40,11 @@ jobs:
       - run:
           name: myname
           command: echo $MY_NAME
-      - print_pipeline_id:
+      - print_pipeline_id: string_to_print
           string_to_print: $CIRCLE_WORKFLOW_ID
+      - error_handler:
+          when: on_fail
+
 
 
 # Orchestrate or schedule a set of jobs
