--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,12 @@ jobs:
       - run:
           name: myname
           command: echo $MY_NAME
+
       - print_pipeline_id:
-          string_to_print:
+          string_to_print: $CIRCLE_WORKFLOW_ID
+
+      - run: return 1
+
       - error_handler
 
 
